# playground

./: README.md  pyproject.toml
src/: 01_establishing_connectivity_the_engine.py  02_dbapi.py  02_working_with_transactions_and_the_dbapi.py  03_metadata.py  03_working_with_database_metadata.py  04_working_with_data.py  05_data_manipulation_with_the_orm.py  06_1_working_with_orm_related_objects.py  06_2_raiseload
