[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Kangwhi Kim <kkh8123@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"